--- a/Assets/style/designSystem.css
+++ b/Assets/style/designSystem.css
@@ -98,6 +98,15 @@ navbar styling
   align-items: center;
   gap: 20px;
 }
+.navbar__icon {
+  display: none;
+}
+.navbar__icon i {
+  cursor: pointer;
+  font-size: var(--h2);
+  color: var(--color-white-100);
+}
+
 .title {
   font-size: var(--h2);
   color: var(--color-white-100);
@@ -140,8 +149,33 @@ navbar styling
   .container {
     max-width: 500px;
   }
-  .navbar__menu {
+  .navbar__icon {
+    display: block;
+  }
+  .hide {
     display: none;
+  }
+  .navbar__menu {
+    /* display: none; */
+    z-index: 1;
+    background-color: var(--color-green-100);
+    position: absolute;
+    top: 15vh;
+    width: 100%;
+    right: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+  }
+  .navbar__menu--1 {
+    margin-top: -200px;
+  }
+  .hidden {
+    z-index: -1;
+    opacity: 0%;
   }
 }
 /* for mobile 
